--- a/tommy.html
+++ b/tommy.html
@@ -211,7 +211,8 @@ div#myDiv {
   <img src="img/zNLZtOMewjng.jpg" alt="" width="5%" height="5%">
 <center>
   <h1 class="titulo-color">TOMMY HILFIGER </h1>
-</center>
+  <p>Venta de Ropa Y Accesorios</p>
+  </center>
 </div>
 <div class="footer">
   <center>
